# tag_search

./: .gitignore  Cargo.toml  readme.md
scripts/: cut_posts.ipynb
src/: lib.rs  main.rs
tests/: grep.rs  searh_in_all_novals.rs  test_match_tag.rs
