[package]
name = "search"
version = "0.1.0"
authors = ["mark"]
edition = "2021"

[dependencies]
serde_json = "1.0.120"
normpath = "1.2.0"
path-clean = "1.0.1"
core_affinity = "0.8.1"
linereader = "0.4.0"
memmap = "0.7.0"
grep = "0.3.1"
termcolor = "1.4.1"
walkdir = "2.5.0"
memmem = "0.1.1"
memchr = "2.7.4"
